# Rubiks_cubes

./: README.md
2x2cube/: CMakeLists.txt  build.sh  cube2x2.cpp  cube2x2.hpp  cube_logic.cpp  cube_logic.hpp  main.cpp
